--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.7.1"
+browser = "1.8.0"
 coilCompose = "2.7.0"
 converterGson = "2.11.0"
 hiltAndroid = "2.52"
@@ -34,6 +35,7 @@ materialIconsExtended = "1.7.4"
 hiltNavigationCompose = "1.2.0"
 
 [libraries]
+androidx-browser = { module = "androidx.browser:browser", version.ref = "browser" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
