--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,7 +8,7 @@ composeM2 = "1.15.0"
 composeM3 = "1.15.0"
 converterGson = "2.11.0"
 core = "1.15.0"
-hiltAndroid = "2.52"
+hiltAndroid = "2.55"
 kotlin = "2.0.0"
 coreKtx = "1.13.1"
 junit = "4.13.2"
@@ -43,23 +43,23 @@ views = "1.15.0"
 
 [libraries]
 androidx-browser = { module = "androidx.browser:browser", version.ref = "browser" }
-androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version = "1.15.0" }
 billing = { module = "com.android.billingclient:billing" }
 billing-ktx = { module = "com.android.billingclient:billing-ktx" }
 charts = { module = "io.github.dautovicharis:charts" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
-compose = { module = "com.patrykandpatrick.vico:compose", version = "2.0.0-beta.3" }
-compose-m2 = { module = "com.patrykandpatrick.vico:compose-m2", version = "2.0.0-beta.3" }
-compose-m3 = { module = "com.patrykandpatrick.vico:compose-m3", version = "2.0.0-beta.3" }
+compose = { module = "com.patrykandpatrick.vico:compose", version = "2.0.0" }
+compose-m2 = { module = "com.patrykandpatrick.vico:compose-m2", version = "2.0.0" }
+compose-m3 = { module = "com.patrykandpatrick.vico:compose-m3", version = "2.0.0" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
-core = { module = "com.patrykandpatrick.vico:core", version = "2.0.0-beta.3" }
+core = { module = "com.patrykandpatrick.vico:core", version = "2.0.0" }
 dautovicharis-charts = { module = "io.github.dautovicharis:charts", version.ref = "charts" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
 hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltAndroid" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
-androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
+androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version = "2.8.7" }
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version = "1.10.0" }
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version = "2025.01.00" }
 androidx-ui = { group = "androidx.compose.ui", name = "ui" }
@@ -69,9 +69,9 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3", version = "1.4.0-alpha06" }
-androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelCompose" }
+androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version = "2.8.7" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version = "2.9.0-alpha04" }
-androidx-sqlite-ktx = { group = "androidx.sqlite", name = "sqlite-ktx", version.ref = "sqliteKtx" }
+androidx-sqlite-ktx = { group = "androidx.sqlite", name = "sqlite-ktx", version = "2.5.0-alpha12" }
 androidx-material = { group = "androidx.compose.material", name = "material", version = "1.8.0-alpha08" }
 androidx-datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version = "1.1.2" }
 androidx-animation = { group = "androidx.compose.animation", name = "animation", version = "1.8.0-alpha08" }
@@ -92,7 +92,7 @@ androidx-material-icons-extended = { group = "androidx.compose.material", name =
 androidx-hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "converterGson" }
 billingclient-billing-ktx = { group = "com.android.billingclient", name = "billing-ktx", version.ref = "billingKtx" }
-views = { module = "com.patrykandpatrick.vico:views", version = "2.0.0-beta.3" }
+views = { module = "com.patrykandpatrick.vico:views", version = "2.0.0" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
