--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ browser = "1.8.0"
 charts = "1.3.1"
 coilCompose = "2.7.0"
 compose = "1.15.0"
+composeCharts = "latest_version"
 composeM2 = "1.15.0"
 composeM3 = "1.15.0"
 converterGson = "2.11.0"
@@ -40,6 +41,7 @@ materialIconsExtended = "1.7.4"
 hiltNavigationCompose = "1.2.0"
 billingKtx = "7.1.1"
 views = "1.15.0"
+roomRuntimeAndroid = "2.7.1"
 
 [libraries]
 androidx-browser = { module = "androidx.browser:browser", version.ref = "browser" }
@@ -49,6 +51,7 @@ billing-ktx = { module = "com.android.billingclient:billing-ktx" }
 charts = { module = "io.github.dautovicharis:charts" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 compose = { module = "com.patrykandpatrick.vico:compose", version = "2.1.3" }
+compose-charts = { module = "io.github.ehsannarmani:compose-charts", version = "0.1.7" }
 compose-m2 = { module = "com.patrykandpatrick.vico:compose-m2", version = "2.1.3" }
 compose-m3 = { module = "com.patrykandpatrick.vico:compose-m3", version = "2.1.3" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
@@ -93,6 +96,7 @@ androidx-hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navig
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "converterGson" }
 billingclient-billing-ktx = { group = "com.android.billingclient", name = "billing-ktx", version.ref = "billingKtx" }
 views = { module = "com.patrykandpatrick.vico:views", version = "2.1.3" }
+androidx-room-runtime-android = { group = "androidx.room", name = "room-runtime-android", version.ref = "roomRuntimeAndroid" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
